# life-sequencing-dutch

./: .gitignore  .pre-commit-config.yaml  README.md  check-numba.ipynb  pyproject.toml
code/evaluation/: generate_income_baseline.py  generate_life_course_report.py  report_utils.py
data/cls/: additional_results_log_train_only.csv  additional_results_log_train_only_formatted.csv  additional_results_min-max_train_only.csv  additional_results_min-max_train_only_formatted.csv  additional_results_yeo-johnson_train_only.csv  additional_results_yeo-johnson_train_only_formatted.csv  additional_results_z-normalization_train_only.csv  additional_results_z-normalization_train_only_formatted.csv  primary_results_log_train_only.csv  primary_results_log_train_only_formatted.csv  primary_results_min-max_train_only.csv  primary_results_min-max_train_only_formatted.csv  primary_results_yeo-johnson_train_only.csv  primary_results_yeo-johnson_train_only_formatted.csv  primary_results_z-normalization_train_only.csv  primary_results_z-normalization_train_only_formatted.csv
docs/: Node Feature Documentation.txt  cbs_ossc.md  data_processing_pipeline.md  income_info.md  prediction_model_settings.txt  regular_snellius.md  virtual_envs.md
exports/: Dec-6-2023  README.md
exports/Dec-6-2023/: 231204_0500_Export Template.docx  231204_0500_report_utils.py  231204_0500_write_embedding_metadata.py
notebooks/: emb-clustering.ipynb  masking.ipynb  queryable-sequences.ipynb  run_or_walk.ipynb  span_masking.ipynb
pop2vec/clustering/: core.py  evaluation.py  run_clustering.py  utils.py
pop2vec/evaluation/: baseline_evaluation_v1.py  baseline_v1_utils.py  check_RINPERSOON_Intersection.py  check_RINPERSOON_intersection_parallel.py  check_rinpersoon_int.py  combine_layer_adjacencies.py  convert_data_to_sqlite.py  convert_embeddings_to_csv.py  create_life_seq_parquets_parallel.py  extract_embedding_subset.py  generate_income_baseline.py  generate_life_course_report.py  isolate_income_subset.py  isolate_marriage_subset.py  isolate_marriage_subset_overall.py  plot_oct_8.py  prepare_naive_baseline.py  report_tests.py  report_utils.py  write_embedding_metadata.py
pop2vec/fake_data/: create_embeddings.py  create_eval_pkl_files.py  create_fake_data.py  fake_data_generator.py  gen_csv_from_jsons.py  gen_spreadsheets.py  generate_rinpersoon.py  generate_step2_data.py  meta_dataset.py  utils.py
pop2vec/graph/: README.md
pop2vec/others/: create_h5_dry_run.py
pop2vec/utils/: check_model_weights.py  constants.py  convert_hdf5_to_parquet.py  merge_hdf5.py  parquet_walks.py  sample_from_parquet.py  save_to_parquet.py  separate_files_for_preprocessing.py  transform_spells.py
requirements/: cbs_ra.txt  load_venv.sh  regular.txt  snel_modules_2023.sh  snellius.txt  source.txt  translate.py
(+313 files in other folders)
